# estream-marketplace

./: CLAUDE.md  Cargo.toml  README.md
.es/: id_map.json
advertising/catalyst/: README.md  estream-component.toml
advertising/crm/: README.md  estream-component.toml
advertising/etch/: README.md  estream-component.toml
advertising/journeys/: catalyst_prediction_feedback.flj  (+1 more)
branding/: BRAND_GUIDELINES.md  badge-descriptions.md
bridge/: README.md  domain.fl  estream-component.toml
ci/: verify-component.yml
console/: admin_console.fl  cloud_ops.fl  customer_console.fl  dev_tooling.fl  publisher_console.fl
docs/: README.md  api-reference.md  cli-reference.md  component-guide.md  faq.md  getting-started.md  pricing-guide.md  security-model.md
industrial/: domain.fl  estream-component.toml
licensing/: asic_ip_licensing.fl  blinded_tokens.fl  composite_visibility.fl  metering.fl  pricing_tiers.fl  settlement.fl  strategic_grants.fl
messaging/: README.md  domain.fl  estream-component.toml
payments/: README.md  cross_border_README.md  domain.fl  estream-component.toml  iso20022_README.md  payment_README.md
pricing/: provider_pricing.fl
radio/: README.md  domain.fl  estream-component.toml
registry/: cortex_upstream_sync.fl  dependency_resolution.fl  internal_marketplace.fl  package_fork.fl  package_format.fl  package_mirror.fl
runtime/industrial/: Cargo.toml
runtime/industrial/src/: config.rs  error.rs  lib.rs  types.rs
runtime/industrial/src/emitter/: mod.rs
runtime/industrial/src/gateway/: lite.rs  mod.rs
runtime/industrial/src/protocol/: mod.rs  modbus.rs
runtime/industrial/src/scheduler/: mod.rs
runtime/industrial/src/streamsight/: mod.rs
runtime/industrial/src/transport/: mod.rs  tcp.rs
runtime/iso20022/: Cargo.toml
runtime/iso20022/benches/: parser_benchmark.rs
runtime/iso20022/src/: error.rs  esf.rs  lib.rs  schema.rs  types.rs
runtime/iso20022/src/messages/: mod.rs  pacs002.rs  pacs008.rs
secure-video/: README.md  domain.fl  estream-component.toml
solutions/: customer_onboarding.fl  lex_boundary.fl  polylabs_suite.fl  revenue_waterfall.fl  solution_manifest.fl
specs/: ASIC_HARD_IP_LICENSING_SPEC.md  COMPONENT_REGISTRY_API_SPEC.md  ESTREAM_MARKETPLACE_SPEC.md  INDUSTRIAL_PROTOCOL_GATEWAY.md  MARKETPLACE_SPEC.md  STRATEGIC_GRANTS_SPEC.md
streams/: marketplace_inventory.fl  marketplace_streams.fl
templates/: CHANGELOG.md  MIGRATION.md  estream-component.template.toml  marketplace-transaction.template.yaml
vault/: README.md  domain.fl  estream-component.toml
widgets/: README.md  domain.fl  estream-component.toml
(+188 files in other folders)
